фиксит разметку и стили для index.html

--- a/source/sass/blocks/cards.scss
+++ b/source/sass/blocks/cards.scss
@@ -1,10 +1,9 @@
 .cards {
-  padding-top: 32px;
-
-  background-color: $background-color-main;
+  //background-color: $background-color-main;
 
   &__wrapper {
     width: 280px;
+    padding-top: 31px;
     padding-right: 20px;
     padding-left: 20px;
     margin: 0 auto;
@@ -38,6 +37,7 @@
   .cards {
     &__wrapper {
       width: 620px;
+      padding-top: 32px;
     }
 
     &__slogan {
@@ -76,7 +76,7 @@
 
     &__slogan {
       padding: 0 149px;
-      margin-bottom: 90px;
+      margin-bottom: 89px;
     }
 
     &__item {
