--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -20,6 +20,9 @@
     min-height: 69px;
     padding: 21px 20px;
     margin: 0 auto;
+
+    // ВРЕМЕННО
+    height: 66px;
   }
 
   &__logo-link {
