--- a/source/sass/blocks/site-list.scss
+++ b/source/sass/blocks/site-list.scss
@@ -1,4 +1,5 @@
 .site-list {
+
   &__item {
     text-align: center;
     vertical-align: center;
@@ -17,6 +18,7 @@
   }
 
   &__link {
+    transition: 0.2s;
     display: block;
 
     width: 100%;
