--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -6,6 +6,7 @@ $desktop-width: 960px;
 $white: #ffffff;
 $black: #000000;
 $blue--dark: #283645;
+$blue--dark-sec: #1d2631;
 $grey: #e5e5e5;
 $grey--light: #f2f2f2;
 $pink: #d22856;
@@ -14,6 +15,7 @@ $green--dark: #1c9b5e;
 
 $background-color-header--shown: $blue--dark;
 $background-color-header--hidden: rgba($black, 0.3);
+$background-color-intro: $blue--dark-sec;
 $background-color-download: $background-color-header--shown;
 $background-color-main: $white;
 $background-color-main--additional: $grey--light;
