--- a/source/sass/blocks/features.scss
+++ b/source/sass/blocks/features.scss
@@ -4,11 +4,8 @@
   overflow: hidden;
 
   &__wrapper {
-    width: 280px;
     padding-top: 16px;
-    padding-right: 20px;
-    padding-left: 20px;
-    margin: 0 auto;
+    @include wrapper();
   }
 
   &__slogan {
@@ -86,7 +83,6 @@
 @media (min-width: $tablet-width) {
   .features {
     &__wrapper {
-      width: 620px;
       padding-top: 42px;
     }
 
@@ -148,11 +144,7 @@
 
 @media (min-width: $desktop-width) {
   .features {
-
     &__wrapper {
-      width: 940px;
-      padding-left: 10px;
-      padding-right: 10px;
       padding-top: 0;
     }
 
