--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -11,7 +11,7 @@
 
   &__page-title {
     display: block;
-    margin-top: 6px;
+    margin-top: 28px;
     margin-bottom: 82px;
     padding: 0 20px;
 
@@ -20,11 +20,8 @@
   }
 
   &__wrapper {
-    width: 280px;
     padding-top: 66px;
-    padding-right: 20px;
-    padding-left: 20px;
-    margin: 0 auto;
+    @include wrapper();
   }
 
   &__wrapper--index-page {
@@ -79,7 +76,6 @@
     }
 
     &__wrapper {
-      width: 620px;
       padding-top: 110px;
       padding-bottom: 7px;
 
@@ -88,6 +84,8 @@
 
     &__wrapper--index-page {
       padding-top: 109px;
+      padding-bottom: 85px;
+
 
       background-image: url("../img/iphone-hand-tablet@1x.png");
       background-position: -20px bottom;
@@ -99,10 +97,13 @@
       margin-bottom: 141px;
     }
 
+    &__download-links-wrapper {
+      width: calc(50% - 10px);
+    }
+
     &__slogan {
       box-sizing: border-box;
       display: block;
-      width: calc(50% - 10px);
       padding: 0 32px;
       margin-top: 93px;
       margin-bottom: 31px;
@@ -112,21 +113,19 @@
     }
 
     &__main-link {
-      width: calc(50% - 10px);
       margin-top: 16px;
       margin-bottom: 46px;
     }
 
     &__list {
       box-sizing: border-box;
-      width: calc(50% - 10px);
       padding: 0 32px;
       margin-bottom: 36px;
     }
 
     &__legend {
-      width: 50%;
-      margin-bottom: 102px;
+      width: 310px;
+      //margin-bottom: 102px;
 
       font-size: 18px;
       line-height: 24px;
@@ -139,16 +138,13 @@
     background-image: url("../img/bg-back-desktop@1x.jpg");
 
     &__wrapper {
-      width: 940px;
       padding-top: 109px;
-      padding-right: 10px;
-
-      padding-left: 10px;
     }
 
     &__wrapper--index-page {
       background-image: url("../img/iphone-hand-desktop@1x.png");
       background-position: calc(50% + 72px) bottom;
+      padding-bottom: 100px;
     }
 
     &__page-title {
@@ -157,8 +153,11 @@
       margin-bottom: 102px;
     }
 
-    &__slogan {
+    &__download-links-wrapper {
       width: 300px;
+    }
+
+    &__slogan {
       padding-left: 31px;
       padding-right: 33px;
       margin-top: 107px;
@@ -168,7 +167,6 @@
     }
 
     &__main-link {
-      width: 300px;
       margin-top: 53px;
       margin-bottom: 66px;
 
@@ -176,14 +174,12 @@
     }
 
     &__list {
-      width: 300px;
-
       margin-bottom: 55px;
     }
 
     &__legend {
       width: 311px;
-      margin-bottom: 115px;
+      //margin-bottom: 115px;
     }
   }
 }
