--- a/source/sass/blocks/reviews.scss
+++ b/source/sass/blocks/reviews.scss
@@ -3,10 +3,7 @@
   padding-top: 42px;
 
   &__wrapper {
-    width: 280px;
-    padding-left: 20px;
-    padding-right: 20px;
-    margin: 0 auto;
+    @include wrapper();
   }
 
   background-color: $background-color-main;
@@ -54,10 +51,6 @@
   .reviews {
     padding-top: 80px;
 
-    &__wrapper {
-      width: 620px;
-    }
-
     &__user-name {
       order: 1;
       margin-top: 16px;
@@ -83,12 +76,6 @@
 @media (min-width: $desktop-width) {
   .reviews {
     padding-top: 70px;
-
-    &__wrapper {
-      width: 940px;
-      padding-right: 10px;
-      padding-left: 10px;
-    }
 
     &__quotes-item {
       display: block;
