--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -2,7 +2,7 @@
   display: block;
   box-sizing: border-box;
   width: 100%;
-  height: 56px;
+  min-height: 56px;
   border: 3px solid $border-color;
   border-radius: 30px;
 
