--- a/source/sass/blocks/editing.scss
+++ b/source/sass/blocks/editing.scss
@@ -1,7 +1,8 @@
 .editing {
   &__list {
+    position: relative;
     padding-top: 35px;
-    padding-bottom: 21px;
+    padding-bottom: 104px;
     display: flex;
     width: 100%;
     justify-content: space-around;
@@ -17,20 +18,19 @@
     width: 240px;
     margin: 0 auto;
     margin-bottom: 61px;
+    position: absolute;
+    bottom: 0;
+    left: 19px;
   }
 
-  &__radio--crop:checked ~ &__range--crop,
-  &__radio--fill:checked ~ &__range--fill,
-  &__radio--contrast:checked ~ &__range-contrast {
+  &__radio--crop:checked ~ &__list &__range--crop,
+  &__radio--fill:checked ~ &__list &__range--fill,
+  &__radio--contrast:checked ~ &__list &__range--contrast {
     display: block;
   }
 
   &__button {
     margin-bottom: 12px;
-  }
-
-  &__button--cancel {
-    margin-bottom: 40px;
   }
 }
 
@@ -38,29 +38,39 @@
   .editing {
     &__input-wrapper {
       width: 260px;
-      padding-right: 15px;
+      padding-right: 13px;
     }
 
     &__list {
-      display: none;
+      display: block;
+      padding-top: 0;
+      padding-bottom: 47px;
+    }
+
+    &__element {
+      padding-bottom: 20px;
+    }
+
+    &__label {
+      display: flex;
+      justify-content: space-around;
+      margin-bottom: 21px;
+      margin-top: 8px;
+    }
+
+    &__radio ~ &__list &__range {
+      position: static;
     }
 
     &__range {
       display: block;
-      margin: 0;
-      margin-left: 58px;
-      margin-bottom: 31px;
       width: 202px;
-      height: 41px;
+      margin: 0;
+      margin-right: -4px;
     }
 
-    &__button--post {
-      margin-top: 79px;
+    &__button {
       margin-bottom: 24px;
-    }
-
-    &__button--reset {
-      margin-bottom: 0;
     }
   }
 }
@@ -72,9 +82,18 @@
       padding-right: 0;
     }
 
+    &__label {
+      margin-top: 0;
+      justify-content: space-between;
+    }
+
+    &__element {
+      padding-bottom: 7px;
+    }
+
     &__range {
       width: 288px;
-      margin-left: 92px;
+      margin-right: 30px;
     }
 
     &__button {
@@ -85,7 +104,7 @@
     &__buttons-wrapper {
       display: flex;
       justify-content: space-between;
-      margin-top: 158px;
+      margin-top: 81px;
     }
   }
 }
