--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -1,17 +1,27 @@
 .form {
   &__item {
-    margin-bottom: 45px;
+    margin-bottom: 52px;
   }
 
   &__name {
-    padding-right: 18px;
-    padding-left: 18px;
     border: none;
+    padding: 0;
+    padding-top: 19px;
+    padding-bottom: 25px;
+    margin: 0;
   }
 
-  &__label--text {
-    padding-left: 22px;
+  &__input--name,
+  &__input--contacts,
+  &__label--radio,
+  &__label--checkbox {
+    letter-spacing: 0.3px;
+  }
 
+
+  &__label--name,
+  &__label--contacts {
+    text-align: left;
     font-family: $default-font;
     font-weight: normal;
     font-size: 14px;
@@ -20,43 +30,43 @@
     color: $text-color--additional;
   }
 
-  &__input[type="text"],
-  &__input[type="tel"],
-  &__input[type="email"] {
-    margin-top: 10px;
+  &__input--name,
+  &__input--contacts {
+    margin-top: 5px;
     margin-bottom: 16px;
     box-sizing: border-box;
     width: 100%;
     border: 2px solid $border-color;
-    padding: 15px 22px;
+    padding: 15px 21px;
 
     font-family: $default-font;
     font-weight: 200;
     font-size: 18px;
     line-height: 30px;
     color: $text-color;
+
+    //ВРЕМЕННО
+    background-color: transparent;
   }
 
-  &__input[type="text"]:hover,
-  &__input[type="tel"]:hover,
-  &__input[type="email"]:hover {
+  &__input--name:hover,
+  &__input--contacts:hover {
     border-color: $text-color;
   }
 
-  &__input[type="text"]:focus,
-  &__input[type="tel"]:focus,
-  &__input[type="email"]:focus {
+  &__input--name:focus,
+  &__input--contacts:focus {
     border-color: $text-color--additional;
   }
 
-  &__input[type="text"]:placeholder-shown,
-  &__input[type="tel"]:placeholder-shown,
-  &__input[type="email"]:placeholder-shown {
+  &__input--name:placeholder-shown,
+  &__input--contacts:placeholder-shown {
     color: $text-color;
   }
 
   &__label--checkbox,
   &__label--radio {
+    padding-left: 70px;
     font-family: $default-font;
     font-weight: 200;
     font-size: 18px;
@@ -65,15 +75,35 @@
   }
 
   &__achievements-wrapper {
+    position: relative;
+  }
+
+  &__achievements-wrapper::before {
+    content: "";
+    display: block;
+    position: absolute;
+    z-index: -1;
+    width: 100vw;
+    height: 100%;
+    top: 0;
+    left: calc(50% - 50vw);
     background-color: $background-color-main--additional;
   }
 
   &__achievements {
+    margin: 0;
+    padding: 0;
     border: none;
+    position: relative;
+  }
+
+  &__input[type="checkbox"],
+  &__input[type="radio"] {
+    display: none;
   }
 
   &__legend {
-    padding: 40px 30px;
+    padding: 38px 30px 44px;
 
     text-align: center;
     font-family: $default-font;
@@ -82,30 +112,59 @@
     line-height: 18px;
     text-transform: uppercase;
     color: $text-color--additional;
+    letter-spacing: 0.3px;
+  }
+
+  &__legend--message {
+    padding: 39px 30px 44px;
   }
 
   &__contacts {
-    padding-top: 30px;
-    padding-right: 18px;
-    padding-left: 18px;
+    margin: 0;
+    padding: 0;
+    padding-top: 26px;
     border: none;
   }
 
+  &__legend--contacts {
+    display: none;
+  }
+
   &__platform-wrapper {
-    margin-top: 20px;
+    position: relative;
+    margin-top: 25px;
+  }
+
+  &__platform-wrapper::before {
+    content: "";
+    display: block;
+    position: absolute;
+    z-index: -1;
+    width: 100vw;
+    height: 100%;
+    top: 0;
+    left: calc(50% - 50vw);
     background-color: $background-color-main--additional;
   }
 
   &__platform {
-    padding-right: 18px;
-    padding-left: 18px;
+    margin: 0;
+    padding: 0;
     border: none;
   }
 
+  &__platform &__legend {
+    padding-bottom: 39px;
+  }
+
+  &__item--radio {
+    margin-bottom: 45px;
+  }
+
   &__message {
-    padding-top: 30px;
-    padding-right: 18px;
-    padding-left: 18px;
+    margin: 0;
+    padding: 0;
+    padding-top: 34px;
     border: none;
   }
 
@@ -120,16 +179,25 @@
 
   &__label-value {
     display: block;
+    padding-left: 22px;
+  }
+
+  &__message &__label-value {
+    padding-left: 0;
     text-align: center;
-    margin-bottom: 20px;
+    margin-bottom: 11px;
   }
 
   &__text {
+    background-color: transparent;
     box-sizing: border-box;
     width: 100%;
     border: 2px solid $border-color;
-    padding: 20px 20px;
-    margin-bottom: 52px;
+    padding: 14px 18px;
+    padding-bottom: 3px;
+    margin-bottom: 42px;
+    margin-top: -60px;
+    min-height: 201px;
 
     font-family: $default-font;
     font-weight: normal;
@@ -141,10 +209,10 @@
   }
 
   &__button {
-    width: calc(100% - 40px);
-    height: 60px;
-    margin: 0 20px;
-    margin-bottom: 45px;
+    width: 100%;
+    min-height: 62px;
+    border-radius: 0;
+    margin-bottom: 37px;
   }
 
   &__designation {
@@ -159,7 +227,289 @@
     color: $text-color;
   }
 
-  &__designation sup {
+  &__asterisk {
     color: $text-color--additional;
+  }
+
+  &__asterisk-added {
+    display: none;
+  }
+}
+
+@media (min-width: $tablet-width) {
+  .form {
+    &__label--name {
+      display: flex;
+      padding-left: 0;
+      margin-bottom: 51px;
+    }
+
+    &__label-value {
+      padding-right: 18px;
+      padding-left: 0;
+      margin: auto 0;
+    }
+
+    &__name {
+      order: 0;
+      padding-top: 49px;
+      padding-bottom: 0;
+    }
+
+    &__input--name,
+    &__input--contacts {
+      margin: 0;
+    }
+
+    &__legend {
+      padding: 0 35px;
+      margin: 0 auto;
+    }
+
+    &__platform-wrapper {
+      order: 1;
+      margin-top: 6px;
+    }
+
+    &__platform-wrapper::before {
+      display: none;
+    }
+
+    &__platform {
+      @include fieldset-border();
+      padding-top: 48px;
+      padding-bottom: 14px;
+    }
+
+    &__platform &__legend {
+      padding: 0 25px;
+    }
+
+    &__item--radio {
+      padding-left: 48px;
+    }
+
+    &__achievements-wrapper {
+      order: 3;
+    }
+
+    &__achievements-wrapper::before {
+      display: none;
+    }
+
+    &__achievements {
+      box-sizing: border-box;
+      margin-top: 54px;
+      padding-top: 48px;
+      padding-right: 58px;
+      padding-left: 58px;
+      @include fieldset-border();
+    }
+
+    &__label--checkbox {
+      padding-left: 60px;
+    }
+
+    &__contacts {
+      @include fieldset-border();
+      margin-top: 57px;
+      padding-top: 37px;
+      padding-right: 60px;
+      padding-left: 60px;
+      order: 2;
+    }
+
+    &__input--contacts {
+      border-right-width: 60px;
+      margin-bottom: 8px;
+      padding-left: 17px;
+    }
+
+    &__label--contacts {
+      display: flex;
+      flex-direction: column-reverse;
+    }
+
+    &__label-value--contacts {
+      padding-left: 17px;
+      margin-bottom: 30px;
+    }
+
+    &__legend--contacts {
+      display: block;
+      text-align: center;
+    }
+
+    &__message {
+      padding: 20px 60px;
+      padding-top: 37px;
+      padding-bottom: 47px;
+      margin-top: 58px;
+      order: 4;
+      @include fieldset-border();
+    }
+
+    &__text {
+      padding-bottom: 24px;
+      margin-top: 0;
+      margin-bottom: 0;
+      min-height: 193px;
+    }
+
+    &__label-value--message {
+      padding-right: 0;
+    }
+
+    &__button {
+      width: 300px;
+      margin-bottom: 0;
+    }
+
+    &__designation {
+      display: block;
+      margin: auto 0;
+    }
+
+    &__button-designation-wrapper {
+      margin-top: 68px;
+      margin-bottom: 53px;
+      order: 5;
+      display: flex;
+      justify-content: space-between;
+    }
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .form {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    padding-top: 42px;
+
+    &__name {
+      width: 50%;
+      padding-top: 21px;
+    }
+
+    &__platform-wrapper {
+      width: 50%;
+    }
+
+    &__platform {
+      margin-left: 35px;
+      padding-top: 50px;
+    }
+
+    &__input--name {
+      margin-right: 35px;
+    }
+
+    &__item--radio {
+      padding-left: 63px;
+    }
+
+    &__contacts {
+      display: flex;
+      justify-content: space-between;
+      padding-top: 35px;
+      margin-top: 5px;
+      width: 100%;
+    }
+
+    &__label--contacts {
+      width: calc(50% - 35px);
+    }
+
+    &__label-value--contacts {
+      padding-left: 18px;
+      margin-bottom: 15px;
+    }
+
+    &__achievements-wrapper {
+      width: 100%;
+    }
+
+    &__achievements {
+      margin-top: 56px;
+      padding: 48px 58px;
+      padding-bottom: 8px;
+    }
+
+    &__legend {
+      padding: 0 31px;
+    }
+
+    &__list--achievements {
+      display: flex;
+      flex-wrap: wrap;
+    }
+
+    &__item--achievements:nth-child(1),
+    &__item--achievements:nth-child(2) {
+      width: 314px;
+    }
+
+    &__item--achievements:nth-child(3),
+    &__item--achievements:nth-child(4) {
+      width: 297px;
+    }
+
+    &__item--achievements:nth-child(5),
+    &__item--achievements:nth-child(6) {
+      width: 209px;
+    }
+
+    &__item--achievements:nth-child(1) {
+      order: 0;
+    }
+
+    &__item--achievements:nth-child(2) {
+      order: 3;
+    }
+
+    &__item--achievements:nth-child(3) {
+      order: 1;
+    }
+
+    &__item--achievements:nth-child(4) {
+      order: 4;
+    }
+
+    &__item--achievements:nth-child(5) {
+      order: 2;
+    }
+
+    &__item--achievements:nth-child(6) {
+      order: 5;
+    }
+
+    &__message {
+      width: 100%;
+      margin-top: 57px;
+      padding-bottom: 37px;
+    }
+
+    &__legend {
+      padding: 0 38px;
+    }
+
+    &__text {
+      padding-top: 11px;
+      padding-bottom: 21px;
+      min-height: 0;
+    }
+
+    &__button-designation-wrapper {
+      margin-top: 65px;
+      margin-bottom: 0;
+      width: 100%;
+      display: flex;
+      justify-content: space-between;
+    }
+
+    &__asterisk-added {
+      display: inline;
+    }
   }
 }
