--- a/source/sass/outline.scss
+++ b/source/sass/outline.scss
@@ -3,29 +3,39 @@
 }
 
 body {
-  background: $background-color-main url("../img/pink-index-mobile-menu.png") no-repeat 50% 0;
+  //background: $background-color-main url("../img/pink-index-mobile-menu.png") no-repeat 50% 0;
   //background: $background-color-main url("../img/pink-photo-mobile.png") no-repeat 50% 0;
+  background: $background-color-main url("../img/pink-form-mobile.png") no-repeat 50% 0;
   background-size: 320px auto;
-  min-height: 3430px;
+  //min-height: 3430px;
   //min-height: 4189px;
+  min-height: 3014px;
+
 }
 
 @media (min-width: $tablet-width) {
   body {
-    background: $background-color-main url("../img/pink-index-tablet.png") no-repeat 50% 0;
+    //background: $background-color-main url("../img/pink-index-tablet.png") no-repeat 50% 0;
     //background: $background-color-main url("../img/pink-photo-tablet.png") no-repeat 50% 0;
+    background: $background-color-main url("../img/pink-form-tablet.png") no-repeat 50% 0;
+
     background-size: 660px auto;
-    min-height: 3678px;
+    //min-height: 3678px;
     //min-height: 3586px;
+    min-height: 3264px;
   }
 }
 
 @media (min-width: $desktop-width) {
   body {
-    background: $background-color-main url("../img/pink-index-desktop.png") no-repeat 50% 0;
+    //background: $background-color-main url("../img/pink-index-desktop.png") no-repeat 50% 0;
     //background: $background-color-main url("../img/pink-photo-desktop.png") no-repeat 50% 0;
+    background: $background-color-main url("../img/pink-form-desktop.png") no-repeat 50% 0;
+
     background-size: 1200px auto;
-    min-height: 4215px;
+    //min-height: 4215px;
     //min-height: 3374px;
+    min-height: 2056px;
+
   }
 }
